# notstd

./: .gitignore  CMakeLists.txt  Makefile  main.c
include/: essentials.h  hashtable.h  linked_list.h  mat3.h  mat4.h  notstd.h  vec.h  vec2.h  vec3.h  vec4.h  vector.h
src/: essentials.c  hashtable.c  hashtable.h  linked_list.c  linked_list.h  mat3.c  mat4.c  vec.c  vec2.c  vec3.c  vec4.c  vector.c
tests/: hashtabletests.c  linkedlisttests.c  mat3tests.c  mat4tests.c  vec2tests.c  vec3tests.c  vec4tests.c  vectests.c  vectortests.c
